added new commands and more
New warn commands. Staff can remove warns and everyone can view warns. It does not save the reason, you can make it if you want to. Added descriptions to most commands

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "python.linting.mypyEnabled": true,
-    "python.linting.enabled": true
+    "python.linting.enabled": true,
+    "python.pythonPath": "C:\\Users\\voltj\\AppData\\Local\\Programs\\Python\\Python38\\python.exe"
 }
